--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,10 +10,10 @@
     <title>Astro</title>
   </head>
   <body>
-	<a href="/">首页</a>
+    <a href="/">首页</a>
     <a href="/about/">关于</a>
     <a href="/contact/">联系</a>
     <h1>Astro</h1>
-	<h2>新的尝试</h2>
+	<h2>关于我：宝可梦爱好者</h2>
   </body>
 </html>
