--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,10 +10,10 @@
     <title>Astro</title>
   </head>
   <body>
-	<a href="/">首页</a>
+    <a href="/">首页</a>
     <a href="/about/">关于</a>
-    <a href="/contact/">联系</a>
-    <h1>Astro</h1>
-	<h2>新的尝试</h2>
+    <a href="/blog/">博客</a>
+    <h3>这是我创建的学习博客</h3>
+    <h3>欢迎交流</h3>
   </body>
 </html>
