--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@
   <body>
 	<a href="/">首页</a>
     <a href="/about/">关于</a>
-    <a href="/contact/">联系</a>
+    <a href="/blog/">博客</a>
     <h1>Astro</h1>
 	<h2>新的尝试</h2>
   </body>
