--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,19 +1,23 @@
 ---
+const pageTitle = "我的博客";
 ---
-
-<html lang="zh-cn">
+<html lang = "zh">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type ="image/svg+xml" href="/favicon.svg" />
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content = {Astro.generator} >
-    <title>Astro</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
     <a href="/">首页</a>
     <a href="/about/">关于</a>
     <a href="/blog/">博客</a>
-    <h3>这是我创建的学习博客</h3>
-    <h3>欢迎交流</h3>
+
+    <h1>我的 Astro 学习博客</h1>
+    <p>这是我的 Astro 学习笔记</p>
+    <ul>
+      <li><a href="/posts/post1/">文章 1</a></li>
+      <li><a href="/posts/post2/">文章 2</a></li>
+      <li><a href="/posts/post3/">文章 3</a></li>
+    </ul>
   </body>
 </html>
