--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+const pageTitle = "首页";
 ---
 
 <html lang="zh-cn">
@@ -7,13 +8,13 @@
     <link rel="icon" type ="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content = {Astro.generator} >
-    <title>Astro</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
 	<a href="/">首页</a>
     <a href="/about/">关于</a>
     <a href="/blog/">博客</a>
-    <h1>Astro</h1>
+    <h1>{pageTitle}</h1>
 	<h2>新的尝试</h2>
   </body>
 </html>
