--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,8 @@
 ---
 import '../styles/global.css';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+
 const pageTitle = "关于我";
 
 const identity = {
@@ -34,9 +37,7 @@ const skillColor = "blue";
       </style>
   </head>
   <body>
-    <a href="/">首页</a>
-    <a href="/about/">关于</a>
-    <a href="/blog/">博客</a>
+    <Header />
     <h1>{pageTitle}</h1>
     <h2>……和我的新 Astro 网站！</h2>
 
@@ -61,6 +62,9 @@ const skillColor = "blue";
     {finished && <p>我完成了这节教程！</p>}
 
     {goal === 4 ? <p>我的目标是在四天内完成。</p> : <p>我的目标不是 4 天。</p>}
-
+    <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
