--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,7 @@
 ---
 import '../styles/global.css';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 const pageTitle = "我的博客";
 ---
 <html lang = "zh">
@@ -9,9 +11,7 @@ const pageTitle = "我的博客";
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">首页</a>
-    <a href="/about/">关于</a>
-    <a href="/blog/">博客</a>
+    <Header/>
 
     <h1>我的 Astro 学习博客</h1>
     <p>这是我的 Astro 学习笔记</p>
@@ -20,5 +20,9 @@ const pageTitle = "我的博客";
       <li><a href="/posts/post2/">文章 2</a></li>
       <li><a href="/posts/post3/">文章 3</a></li>
     </ul>
+    <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
