--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,7 +19,7 @@ const goal = 4;
 
 const skillColor = "blue";
 ---
-<BaseLayout>
+<BaseLayout pageTitle={pageTitle}>
   <style define:vars={{skillColor}}>
     h1 {
       color: purple;
