--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,8 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import '../styles/global.css';
+import BlogPost from '../components/BlogPost.astro';
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
 const pageTitle = "我的博客";
 ---
 
@@ -9,8 +11,6 @@ const pageTitle = "我的博客";
   <h1>我的 Astro 学习博客</h1>
   <p>这是我的 Astro 学习笔记</p>
   <ul>
-    <li><a href="/posts/post1/">文章 1</a></li>
-    <li><a href="/posts/post2/">文章 2</a></li>
-    <li><a href="/posts/post3/">文章 3</a></li>
+    {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
   </ul>
 </BaseLayout>
